# Landmark_transfer

./: AbstractStatistics.cpp  AbstractStatistics.hpp  AtlasCreation.cpp  AtlassFit.cpp  Bone.cpp  Bone.hpp  BoneManager.cpp  BoneManager.hpp  BoneStatistics.cpp  BoneStatistics.hpp  BoneType.hpp  CMakeLists.txt  ConfigCreate.cpp  ConfigFit.cpp  ConfigUtils.cpp  ConfigUtils.hpp  FileIO.cpp  FileIO.hpp  GaussModel.cpp  GaussModel.hpp  GaussianKernel.cpp  GaussianKernel.hpp  GenerateTests.cpp  Landmark.cpp  Landmark.hpp  LandmarkStatistics.cpp  LandmarkStatistics.hpp  MultiscaleGaussianKernel.cpp  MultiscaleGaussianKernel.hpp  SingleBoneTypeManager.cpp  SingleBoneTypeManager.hpp  Statistic.cpp  Tune.cpp  utils.cpp  utils.hpp
